report page text alignment fixed.

--- a/src/app/pages/test-reports/test-reports.component.scss
+++ b/src/app/pages/test-reports/test-reports.component.scss
@@ -211,6 +211,7 @@ nb-accordion::-webkit-scrollbar-thumb:hover {
     text-align: center;
   }
 .testcase-status{
-    font-size: 1.3em;
-    font-weight: bold;
+    font-size: 0.8rem;
+    //font-weight: bold;
+  width: 41%;
 }
